--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,13 @@ repositories {
 }
 
 dependencies {
-	compile 'com.trevorism:http-utils:1.0.2'
-    compile 'com.trevorism:secure-utils:1.0.2'
+	implementation 'com.trevorism:http-utils:1.0.2'
+	implementation 'com.trevorism:secure-utils:1.0.2'
 
-    compile 'org.apache.httpcomponents:httpclient:4.5.10'
-	compile 'com.google.code.gson:gson:2.8.6'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.10'
+	implementation 'com.google.code.gson:gson:2.8.6'
+
+	implementation 'com.trevorism:eventhub-client:1.4.2'
 
 	testCompile 'junit:junit:4.12'
 	testCompile 'org.codehaus.groovy:groovy-all:2.5.8'
