--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ buildscript {
 	}
 }
 
-plugins{
+plugins {
+	id "java-library"
 	id "groovy"
 	id "jacoco"
 }
@@ -25,15 +26,12 @@ repositories {
 }
 
 dependencies {
-	implementation 'com.trevorism:http-utils:1.0.2'
-	implementation 'com.trevorism:secure-utils:1.0.2'
-
-	implementation 'org.apache.httpcomponents:httpclient:4.5.10'
+	implementation 'com.trevorism:secure-http-utils:0.1.0'
 	implementation 'com.google.code.gson:gson:2.8.6'
 
-	implementation 'com.trevorism:eventhub-client:1.4.2'
+	implementation 'com.trevorism:eventhub-client:2.0.0'
 
-	testCompile 'junit:junit:4.12'
+	testCompile 'junit:junit:4.13'
 	testCompile 'org.codehaus.groovy:groovy-all:2.5.8'
 
 }
