--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,20 @@
 buildscript {
-	repositories {
-		mavenCentral()
-		maven {
-			url uri("http://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
-		}
-	}
-	dependencies {
-		classpath 'com.trevorism:gradle-release-plugin:0.4.0'
-	}
+    ext {
+        credsBlock = {
+            username = findProperty("github.user") ?: System.getenv("GITHUB_ACTOR")
+            password = findProperty("github.token") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
+    repositories {
+        mavenCentral()
+        maven {
+            url uri("https://maven.pkg.github.com/trevorism/gradle-release-plugin")
+            credentials credsBlock
+        }
+    }
+    dependencies {
+        classpath 'com.trevorism:gradle-release-plugin:0.7.0'
+    }
 }
 
 plugins {
@@ -20,19 +27,20 @@ apply plugin: "com.trevorism.gradle.release"
 
 repositories {
 	mavenCentral()
-	maven {
-		url uri("http://trevorism-build.eastus.cloudapp.azure.com/nexus/repository/maven-releases")
-	}
+    maven {
+        url uri("https://maven.pkg.github.com/trevorism/secure-http-utils")
+        credentials credsBlock
+    }
 }
 
 dependencies {
-	implementation 'com.trevorism:secure-http-utils:0.7.0'
-	implementation 'com.google.code.gson:gson:2.8.6'
+	implementation 'com.trevorism:secure-http-utils:0.9.0'
+	implementation 'com.google.code.gson:gson:2.9.0'
 
-	implementation 'com.trevorism:eventhub-client:2.3.0'
+	implementation 'com.trevorism:eventhub-client:2.4.0'
 
-	testCompile 'junit:junit:4.13.1'
-	testCompile 'org.codehaus.groovy:groovy-all:2.5.8'
+	testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.codehaus.groovy:groovy-all:2.5.15'
 
 }
 
