--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        credsBlock = {
+        creds = {
             username = findProperty("github.user") ?: System.getenv("GITHUB_ACTOR")
             password = findProperty("github.token") ?: System.getenv("GITHUB_TOKEN")
         }
@@ -9,7 +9,7 @@ buildscript {
         mavenCentral()
         maven {
             url uri("https://maven.pkg.github.com/trevorism/gradle-release-plugin")
-            credentials credsBlock
+            credentials creds
         }
     }
     dependencies {
@@ -29,15 +29,15 @@ repositories {
 	mavenCentral()
     maven {
         url uri("https://maven.pkg.github.com/trevorism/secure-http-utils")
-        credentials credsBlock
+        credentials creds
     }
 }
 
 dependencies {
-	implementation 'com.trevorism:secure-http-utils:0.9.0'
-	implementation 'com.google.code.gson:gson:2.9.0'
+	implementation 'com.trevorism:secure-http-utils:1.0.0'
+	implementation 'com.google.code.gson:gson:2.9.1'
 
-	implementation 'com.trevorism:eventhub-client:2.4.0'
+	implementation 'com.trevorism:eventhub-client:2.5.0'
 
 	testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.15'
