--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,7 @@ repositories {
 dependencies {
 	implementation 'com.trevorism:secure-http-utils:1.0.0'
 	implementation 'com.google.code.gson:gson:2.9.1'
-
-	implementation 'com.trevorism:eventhub-client:2.5.0'
+    implementation 'com.trevorism:reactions-client:0.1.0'
 
 	testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.codehaus.groovy:groovy-all:2.5.15'
